welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:14: error: not found: value speed
	if (speed < a)
            ^caughtSpeeding:18: error: not found: value speed
		else if ( (a <= speed) && (speed <= b))
                                ^