welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (isBirthday)
	{
		test(66,86)
	}
	else
	{
		test(61,80)
	}
}

def test (a:Int, b:Int):Int = 
{
	if (speed < a)
		{
			return 0;
		}
		else if ( (a <= speed) && (speed <= b))
		{
			return 1;
		}
		else return 2;
}
